# cashapp2csv

./: .gitignore  LICENSE  Makefile  README.md  cashapp2csv.py  pyproject.toml
