[project]
name = "cashapp2csv"
version = "0.1.0"
description = "Extract Cash App transaction tables from PDF statements as CSV."
requires-python = ">=3.14"
dependencies = [
    "pdfplumber>=0.11.0",
]

[project.scripts]
cashapp-statement-to-csv = "cashapp2csv:main"

[tool.ruff]

# Same as Black.
indent-width = 4
line-length = 120

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
package = true
